        * Change delete worker to use new DeviceStates interface.

        * Fix get_paths to honor new device state of 'drain' via new
          DeviceStates interface.

        * use signifigantly less CPU when re-broadcasting around
          iostat device utilization% to child processes.  (future:
          don't rebroadcast at all and use shared memory)

        * slightly faster fsck (do less syscalls)

        * efficiency: don't broadcast dup state information to children
          (track in parent what children know already)

        * if using Gearman::Server >= 1.09, respawn the fidsizes
          worker if it dies.

2007-05-09: Release version 2.16

        * BUG FIX from 2.15:  partially written but never closed
          tempfiles weren't being cleaned up properly.

        * start to work better when compiled as a stand-alone
          PAR all-in-one script/archive

2007-05-07: Release version 2.15 ("fsck/drain/rebalance")

        * minor bug fixes and enhancements for MultipleHosts replication
          policy.  bunch of corner cases now checked with new tests.
          now easy to write more replication policy tests in future.

        * replication policies can now return "desperate" requests,
          signalling that a replication reassessment should be
          enqueued for the future, to see if things could be improved.
          (that part's not currently implemented, but the real feature
           and motivation is that the rebalancer now won't delete a
           DevFID if it results in a desperate move, only an ideal move. )

        * replication policies now can optionally return a new return
          value of the (new) type MogileFS::ReplicationRequest, which
          has pretty accessor names, can suggest multiple places,
          can indicate non-ideal emergency replication decisions.
          old plugins' return values will be transparently upgraded
          to the equivalent new return value objects.
