@@ -37,12 +37,23 @@ sub run {
         exit(0);
     };
 
+    my $check_for_parent = sub {
+        # shut ourselves down if our parent mogstored
+        # has gone away.
+        my $ppid = getppid();
+        unless ($ppid && kill(0,$ppid)) {
+            kill 9, $iostat_pid if $iostat_pid;
+            exit(0);
+        }
+    };
+
     my $get_iostat_fh = sub {
         while (1) {
             if ($iostat_pid = open (my $fh, "iostat -dx 1 30|")) {
                 return $fh;
             }
             # TODO: try and find other paths to iostat
+            $check_for_parent->();
             warn "Failed to open iostat: $!\n"; # this will just go to /dev/null, but will be straceable
             sleep 10;
         }
@@ -82,14 +93,7 @@ sub run {
                 $ret .= ".\n";
                 print $ret;
 
-                # shut ourselves down if our parent mogstored
-                # has gone away.
-                my $ppid = getppid();
-                unless ($ppid && kill(0,$ppid)) {
-                    kill 9, $iostat_pid if $iostat_pid;
-                    exit(0);
-                }
-
+                $check_for_parent->();
                 next;
             }
         }
